objects/CusRep_Filter__c.object
<CustomObject>
    <fields>
        <fullName>Controlling_Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Controlling Filter</label>
        <referenceTo>CusRep_Filter__c</referenceTo>
        <relationshipLabel>Dependent Filters</relationshipLabel>
        <relationshipName>CusRep_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CusRep_Settings__c</fullName>
        <label>CusRep_Settings</label>
        <referenceTo>CusRep_Settings__c</referenceTo>
        <relationshipLabel>CusRep_Filters</relationshipLabel>
        <relationshipName>CusRep_Filters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Default_Values__c</fullName>
        <inlineHelpText>Use semicolon separator if you need to provide multiple values.</inlineHelpText>
        <label>Default Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Range</fullName>
                </value>
                <value>
                    <fullName>Dynamic Picklist</fullName>
                </value>
                <value>
                    <fullName>Dependent Picklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum__c</fullName>
        <label>Maximum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum__c</fullName>
        <label>Minimum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Placeholder__c</fullName>
        <label>Placeholder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Criteria_Field__c</fullName>
        <label>Source Criteria Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Display_Field__c</fullName>
        <label>Source Display Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <label>Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <label>Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CusRep_Filter</label>
    <nameField>
        <displayFormat>CRF-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CusRep_Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>